cfn_2/cfn_asg.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: AutoScalingGroup

Parameters: 
  PJPrefix:
    Type: String
  KeyName:
    Description: KeyPair to allow SSH access
    Type: "AWS::EC2::KeyPair::KeyName"
  TargetTrackingConfigurationTargetValue:
    Type: Number

Resources:
#SecurityGroup-HTTP,SSH
  CfSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: AsgSG-public
      VpcId: !ImportValue
        Fn::Sub: ${PJPrefix}-Vpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: "22"
          ToPort: "22"
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: "80"
          ToPort: "80"
      Tags:
        - Key: Name
          Value: !Sub "${PJPrefix}-AsgSG"

# Template
  MyTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        UserData:
          Fn::Base64: |
            #!/bin/bash
            amazon-linux-extras install epel -y
            yum install nginx -y
            systemctl start nginx
            systemctl enable nginx
            yum install unzip -y
        TagSpecifications:
          - ResourceType: instance
            Tags: 
              - Key: Name
                Value: !Sub ${PJPrefix}-Template
        KeyName: !Ref KeyName
        ImageId: ami-037843ed9009f7d41
        InstanceType: t2.micro
        SecurityGroupIds:
          - !Ref CfSecurityGroup

  # AutoScalingGroup 
  TestASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: !Sub ${AWS::StackName}
      VPCZoneIdentifier:
        - !ImportValue 
            Fn::Sub: ${PJPrefix}-PublicSubNet1a
        - !ImportValue 
            Fn::Sub: ${PJPrefix}-PublicSubNet1c
      LaunchTemplate:
        LaunchTemplateId: !Ref MyTemplate
        Version: !GetAtt 'MyTemplate.LatestVersionNumber'
      TargetGroupARNs:
        - !ImportValue 
            Fn::Sub: ${PJPrefix}-TargetGroup
      DesiredCapacity: 2
      MaxSize: 4
      MinSize: 2
      Tags:
        - Key: Name
          Value: !Sub ${PJPrefix}-AsgServer
          PropagateAtLaunch: true
  ASGScalingPolicyHigh:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AutoScalingGroupName: !Ref TestASG
      PolicyType: TargetTrackingScaling
      TargetTrackingConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ASGAverageCPUUtilization
        TargetValue: !Ref TargetTrackingConfigurationTargetValue
  MyAlarmHighCPU:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmDescription: Alarm if CPU too high
      Namespace: AWS/EC2
      MetricName: CPUUtilization
      Dimensions:
        - Name: AutoScalingGroupName
          Value: !Ref TestASG
      Statistic: Average
      Period: 300
      EvaluationPeriods: 1
      Threshold: 70
      ComparisonOperator: GreaterThanThreshold
      AlarmActions:
        - !Ref ASGScalingPolicyHigh
